--- a/core/ui/mainwindow.ui
+++ b/core/ui/mainwindow.ui
@@ -151,7 +151,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
              <x>0</x>
              <y>0</y>
              <width>129</width>
-             <height>529</height>
+             <height>521</height>
             </rect>
            </property>
            <property name="sizePolicy">
@@ -169,7 +169,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
               <x>0</x>
               <y>0</y>
               <width>131</width>
-              <height>226</height>
+              <height>259</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout">
@@ -210,6 +210,13 @@ QToolBox::tab:selected { /* italicize selected tabs */
               <widget class="QPushButton" name="executeButton">
                <property name="text">
                 <string>Execute</string>
+               </property>
+              </widget>
+             </item>
+             <item row="8" column="0">
+              <widget class="QPushButton" name="abortButton">
+               <property name="text">
+                <string>Abort</string>
                </property>
               </widget>
              </item>
@@ -291,7 +298,7 @@ background-repeat:no-repeat;
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
