--- a/core/ui/configuration.ui
+++ b/core/ui/configuration.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>701</width>
-    <height>565</height>
+    <height>619</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -362,7 +362,7 @@ QGroupBox::title {
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="QyEmailLineEdit"/>
+            <widget class="QLineEdit" name="OyEmailLineEdit"/>
            </item>
           </layout>
          </item>
