--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -9,3 +9,11 @@ QGroupBox::title {
     left: 10px;
     padding: 0 3px 0 3px;
 }
+
+QWidget#mplwindow {color:
+    qlineargradient(spread:pad, x1:0.497872, y1:0, x2:0.485106, y2:1, stop:0 rgba(0, 67, 191, 255), stop:1 rgba(0, 0, 0, 255));
+    background: qlineargradient( x1:0.497872, y1:0, x2:0.485106, y2:1, stop:0 #000, stop:1 #0043BF);
+    background-image: url(images/background.png);
+    background-position:center;
+    background-repeat:no-repeat;
+}
