--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -7,8 +7,9 @@ QGroupBox {
 QGroupBox::title {
     subcontrol-origin: margin;
     left: 10px;
-    padding: 0 3px 0 3px;
+    padding: 3px 3px 0 3px;
 }
+
 
 QWidget#mplwindow {color:
     qlineargradient(spread:pad, x1:0.497872, y1:0, x2:0.485106, y2:1, stop:0 rgba(0, 67, 191, 255), stop:1 rgba(0, 0, 0, 255));
