--- a/core/ui/mainwindow.ui
+++ b/core/ui/mainwindow.ui
@@ -240,7 +240,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
            <attribute name="label">
             <string>Chart Control</string>
            </attribute>
-           <widget class="QWidget" name="">
+           <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
               <x>0</x>
@@ -250,15 +250,15 @@ QToolBox::tab:selected { /* italicize selected tabs */
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout_5">
-             <item row="0" column="0">
-              <widget class="QPushButton" name="channel0Button">
+             <item row="1" column="0">
+              <widget class="QPushButton" name="channel1Button">
                <property name="text">
                 <string>PushButton</string>
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
-              <widget class="QPushButton" name="channel1Button">
+             <item row="0" column="0">
+              <widget class="QPushButton" name="channel0Button">
                <property name="text">
                 <string>PushButton</string>
                </property>
@@ -312,6 +312,19 @@ QToolBox::tab:selected { /* italicize selected tabs */
                 <string>PushButton</string>
                </property>
               </widget>
+             </item>
+             <item row="9" column="0">
+              <spacer name="verticalSpacer">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
              </item>
             </layout>
            </widget>
