--- a/core/ui/configuration.ui
+++ b/core/ui/configuration.ui
@@ -308,17 +308,40 @@
           </widget>
          </item>
          <item row="3" column="0">
-          <spacer name="verticalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
+          <widget class="QGroupBox" name="groupBox_4">
+           <property name="title">
+            <string>UKRAA (Futurlec) Controller Baudrate Control</string>
            </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
+           <widget class="QWidget" name="">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>40</y>
+              <width>259</width>
+              <height>29</height>
+             </rect>
+            </property>
+            <layout class="QHBoxLayout" name="horizontalLayout_31">
+             <item>
+              <widget class="QComboBox" name="controllerBaudRateComboBox"/>
+             </item>
+             <item>
+              <widget class="QCheckBox" name="controllerBaudrateDefaultCheckBox">
+               <property name="text">
+                <string>Default</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QPushButton" name="controllerBaudrateSetPushButton">
+               <property name="text">
+                <string>Set</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </widget>
          </item>
         </layout>
        </widget>
