More QTableWidget god you've got to hate it!!

--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -33,7 +33,7 @@ QTableWidget {
     background-color: '#FFFFE0';
 }
 
-QTextBrowser {
-    border: 1px solid gray;
+QTableWidget::section {
+    background-color: '#FFFFE0'
 }
 
