More QTableWidget updates I think this may look ok on Mac OSX

--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -14,7 +14,6 @@ QPlainTextEdit {
     background-color: '#FFFFE0';
 }
 
-
 QWidget#mplwindow {color:
     qlineargradient(spread:pad, x1:0.497872, y1:0, x2:0.485106, y2:1, stop:0 rgba(0, 67, 191, 255), stop:1 rgba(0, 0, 0, 255));
     background: qlineargradient( x1:0.497872, y1:0, x2:0.485106, y2:1, stop:0 #000, stop:1 #0043BF);
@@ -29,11 +28,19 @@ QTabWidget::pane {
 }
 
 QTableWidget {
-    font-size: 12px;
+    font-size: 11px;
     background-color: '#FFFFE0';
 }
 
-QTableWidget::section {
-    background-color: '#FFFFE0'
+QTableWidget QHeaderView {
+    font-size: 11px;
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
 }
+
+QTableWidget QHeaderView::section {
+    height: 18px;
+}
+
 
