--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>905</width>
-    <height>647</height>
+    <height>651</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>651</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -114,7 +120,17 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">QGroupBox {
+    border: 1px solid gray;
+    border-radius: 9px;
+    margin-top: 0.5em;
+}
+
+QGroupBox::title {
+    subcontrol-origin: margin;
+    left: 10px;
+    padding: 3px 3px 0 3px;
+}</string>
       </property>
       <property name="title">
        <string>Control Panel</string>
@@ -228,6 +244,19 @@ QToolBox::tab:selected { /* italicize selected tabs */
                </property>
               </widget>
              </item>
+             <item row="8" column="0">
+              <spacer name="verticalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
             </layout>
            </widget>
           </widget>
@@ -236,8 +265,8 @@ QToolBox::tab:selected { /* italicize selected tabs */
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>129</width>
-             <height>521</height>
+             <width>100</width>
+             <height>30</height>
             </rect>
            </property>
            <attribute name="label">
