--- a/css/macStyle.css
+++ b/css/macStyle.css
@@ -30,13 +30,11 @@ QTabWidget::pane {
 QTableWidget {
     font-size: 11px;
     background-color: '#FFFFE0';
+    border-top: 0px;
 }
 
 QTableWidget QHeaderView {
     font-size: 11px;
-    border: 0px;
-    margin: 0px;
-    padding: 0px;
 }
 
 QTableWidget QHeaderView::section {
