Updated QProgressBar to use css sheets though css will need to be checked on all platforms.

--- a/css/nixStyle.css
+++ b/css/nixStyle.css
@@ -42,3 +42,23 @@ QTableWidget QHeaderView {
 QTableWidget QHeaderView::section {
     height: 18px;
 }
+
+QProgressBar {
+    border: 0px;
+    text-align: center;
+    padding: 0px;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    width: 15px;
+}
+
+QProgressBar::chunk {
+    background: #00B2EE;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
+    border: 0px;
+}
