--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -272,7 +272,7 @@ QToolBox::tab:selected { /* italicize selected tabs */
            <attribute name="label">
             <string>Chart Control</string>
            </attribute>
-           <widget class="QWidget" name="">
+           <widget class="QWidget" name="layoutWidget">
             <property name="geometry">
              <rect>
               <x>0</x>
@@ -305,6 +305,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                  <property name="text">
                   <string>PushButton</string>
                  </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -331,6 +334,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                 <widget class="QPushButton" name="channel1Button">
                  <property name="text">
                   <string>PushButton</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -359,6 +365,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                  <property name="text">
                   <string>PushButton</string>
                  </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -385,6 +394,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                 <widget class="QPushButton" name="channel3Button">
                  <property name="text">
                   <string>PushButton</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -413,6 +425,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                  <property name="text">
                   <string>PushButton</string>
                  </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -439,6 +454,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                 <widget class="QPushButton" name="channel5Button">
                  <property name="text">
                   <string>PushButton</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -467,6 +485,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                  <property name="text">
                   <string>PushButton</string>
                  </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -494,6 +515,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                  <property name="text">
                   <string>PushButton</string>
                  </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -520,6 +544,9 @@ QToolBox::tab:selected { /* italicize selected tabs */
                 <widget class="QPushButton" name="channel8Button">
                  <property name="text">
                   <string>PushButton</string>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
